src/App.css
* {
  margin: 0;
  padding: 0;
}

body {
  background: #fafafa;
  touch-action: pan-y, pan-x;
}

header {
  width: 100vw;
}

header img {
  width: 100%;
  max-height: 300px;
}

.navbar {
  position: fixed;
  bottom: 0;
  width: 100%;
  display: flex;
  justify-content: space-around;
  align-content: center;
  background: black;
  z-index: 99;
  height: 30px;
}

.link {
  color: white;
  text-decoration: none;
  align-self: center;
}

.linkName {
  color: black;
  text-decoration: none;
  align-self: center;
}

.icon {
  font-size: 1.2rem;
  vertical-align: bottom;
}

.App {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.dropDownStyle {
  display: flex;
  align-content: center;
  justify-content: center;
}

#selectList {
  color: black;
  width: 60%;
  height: 38px;
  font: 1.7rem;
  border-radius: 16px 0 0 16px;
  border: 2px solid black;
  box-shadow: 6px 6px 8px #0096ff, 8px 6px 12px #FF10F0;
  padding: 0 1%;
  background: white;
  color: gray;
  -webkit-appearance: none;
}

#selectlist:focus {
  outline: none;
  border: 2px solid black;
}

#selectList:active {
  outline: none;
  border: 2px solid black;
}

.dropDownStyle button {
  margin-bottom: 5%;
  margin-left: -2px;
  border-radius: 0 16px 16px 0;
  border: 2px solid black;
  width: 20%;
  max-width: 25%;
  height: 38px;
  font-size: 1rem;
  color: black;
  box-shadow: 6px 6px 8px #0096ff, 8px 6px 12px #FF10F0;
  background: linear-gradient(to right, lightblue, pink, purple);
}

.searchStyle {
  margin-top: 5%;
  display: flex;
  align-content: center;
  justify-content: center;
}

.searchbar {
  margin-bottom: 3%;
  width: 60%;
  height: 34px;
  font: 1.4rem;
  border-radius: 16px 0 0 16px;
  border: 2px solid black;
  box-shadow: 6px 6px 8px #0096ff, 8px 6px 12px #FF10F0;
  padding-left: 3%;
  -webkit-appearance: none;
}

.searchbar:focus {
  outline: none;
  border: 2px solid black;
}

.searchStyle button {
  margin-bottom: 5%;
  margin-left: -5px;
  border-radius: 0 16px 16px 0;
  border: 2px solid black;
  width: 20%;
  max-width: 25%;
  height: 38px;
  font-size: 1rem;
  color: black;
  box-shadow: 6px 6px 8px #0096ff, 8px 6px 12px #FF10F0;
  background: linear-gradient(to right, lightblue, pink, purple);
}

.container {
  margin-bottom: 35%;
}

.card {
  width: 70%;
  max-width: 600px;
  border: 1px solid black;
  border-radius: 16px;
  margin-top: 3%;
  background: linear-gradient(to bottom right, lightblue, pink, purple);
  display: flex;
  flex-direction: column;
  box-shadow: 4px 4px 8px;
  margin: 0 auto;
  margin-bottom: 7%;
}

Link img {
  margin-top: 5%;
  margin-left: 50%;
  margin-bottom: 3%;
  transform: translateX(-50%);
  width: 100%;
}

.card h2 {
  text-align: center;
  margin-top: 1%;
}

.favorite {
  background: none;
  outline: none;
  border: none;
  margin-right: auto;
  margin-left: 3%;
}

.card hr {
  width: 95%;
  margin: 0 auto;
  height: 1px;
  background-color: black;
  border: none;
}

.card h3 {
  margin-top: 5%;
}

ul {
  list-style-type: none;
  width: 100%;
  display: flex;
  align-content: center;
}

.top {
  display: flex;
  justify-content: space-between;
  align-content: center;
}

li {
  margin: 1% 2%;
}

.card h3 {
  align-self: center;
}

.card p {
  margin: 0 5% 5% 5%;
}

.whereToWatch {
  margin: 2% 1%;
}

.whereToWatchList {
  display: flex;
  flex-wrap: wrap;
}

.whereToBuy {
  margin: 2% 1%;
}

.whereToBuyList {
  display: flex;
  flex-wrap: wrap;
}

.badge {
  background: white;
  border-radius: 16px;
  padding: 2% 2%;
  font-size: 0.8rem;
}

/* Home page */

.App h3 {
  margin-top: 3%;
}

.dayWeek {
  display: flex;
  align-content: center;
  justify-content: center;
  margin-top: 2%;
  margin-bottom: 5%;
}

.dayWeek button {
  background: none;
  outline: none;
  border: none;
  padding: 10% 25%;
  font-size: 1.2rem;
  color: gray;
}

.dayWeek button:hover {
  cursor: pointer;
}

.dayWeek .right {
  border-right: 1px solid gray;
}

.trendingList {
  margin-bottom: 10%;
}

.trendingList h1 {
  text-align: center;
  padding-bottom: 3%;
}

.trendingCard {
  margin: 0 auto;
  width: 70%;
  max-width: 600px;
  border: 1px solid black;
  border-radius: 16px;
  margin-top: 3%;
  background: linear-gradient(to bottom right, lightblue, pink, purple);
  display: flex;
  flex-direction: column;
  box-shadow: 4px 4px 8px black;
  margin-bottom: 7%;
}

/* Movie search page */

.movieContainer {
  margin-bottom: 35%;
}

.movie h2 {
  text-align: center;
  margin-bottom: 5%;
}

.showBtns {
  display: flex;
  align-content: center;
  justify-content: center;
  margin-bottom: 5%;
}

.showBtns input {
  margin: 2%;
  padding: 2%;
  border-radius: 24px;
}

.showBtns button {
  background: none;
  outline: none;
  border: none;
  padding: 5%;
  font-size: 1.2rem;
  color: gray;
}

.showBtns .right {
  border-right: 1px solid gray;
}

/* Movie page */

.moviePage {
  background: linear-gradient(to bottom right, lightblue, skyblue, cyan, skyblue, lightblue);
  min-height: 90vh;

}

.moviePage h2 {
  margin-top: 3%;
  padding: 0 2%;
}

.moviePage p {
  padding: 2%;
}

/* Tv page */

.tv h2 {
  text-align: center;
  margin-bottom: 5%;
}

/* whats new page */

.whatsNew {
 margin-bottom: 25%;
}

.whatsNew h3 {
  padding: 2% 5%;
}

.whatsNew p {
  padding: 0 7%;
}

.whatsNew h4 {
  padding: 3%;
}

.whatsNew ul {
  display: flex;
  flex-direction: column;
  width: 90%;
}

.whatsNew li {
  list-style-type: circle;
  list-style-position: inside;
  padding: 0% 5%;
}

.whatsNew cite {
  padding: 1% 2% 3% 2%;
  margin-left: 10%;
}

.red {
  color: red;
}

.whatsNewBtn {
  color: black;
  text-decoration: none;
  background: #fafafa;
  padding: 3% 0;
  border-radius: 100%;
  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
  border-bottom: solid 4px black;
  border-right: solid 3px black;
  font-size: 1.1rem;
  text-align: center;
  position: fixed;
  top: 5%;
  right: 1%;
  max-width: 75px;
}

@media screen and (max-width: 500px) {

  .navbar {
    padding-top: 10px;
    padding-bottom: 25px;
  }

  .dropDownStyle button {
    font-size: .9rem;
  }

  .searchStyle button {
    font-size: 1rem;
  }
   
  .card {
    width: 90%;
  }


  .card img {
    width: 100%;
    margin-top: 0;
    border-radius: 16px 16px 0 0;
  }

  .card hr {
    display: none;
  }

  /* Trending page */

  .trendingList {
    margin-bottom: 20%;
  }

  /* recomended seection */


}

